1. Метод .of [#352541]